tree-sitter-asciidoc/test/corpus/comment.txt
===========
comment
===========

// A single-line comment.

//

////
block comment

# not title
////

https://www.abcdefg.com

-----

(document
  (block_element
    (line_comment
      (line_comment_marker)
      (body)))
  (block_element
    (line_comment
      (line_comment_marker)))
  (block_element
    (block_comment
      (block_comment_start_marker)
      (body)
      (block_comment_end_marker)))
  (block_element
    (section_block
      (paragraph
        (line)))))

==================================
comment does not close its section
==================================

== A

// c

=== B

text

-----

(document
  (block_element
    (section
      (title1
        (title_h1_marker)
        (line))
      (section_block
        (line_comment
          (line_comment_marker)
          (body)))
      (section
        (title2
          (title_h2_marker)
          (line))
        (section_block
          (paragraph
            (line)))))))
