tree-sitter-asciidoc/test/corpus/table_cell_block.txt
================|||
admonition after a text cell
================|||

|===
|h1 |h2

a|info

[NOTE]
====
x
====

|y
|===

-------------------|||

(document
  (block_element
    (section_block
      (table_block
        (table_block_marker)
        (table_header_row
          (table_cell
            (table_cell_content))
          (table_cell
            (table_cell_content)))
        (table_cell
          (table_cell_attr)
          (table_cell_content)
          (section_block
            (element_attr
              (element_attr_marker)
              (positional_attr
                (block_style))
              (element_attr_marker))
            (delimited_block
              (delimited_block_start_marker)
              (section_block
                (paragraph
                  (line)))
              (delimited_block_end_marker))))
        (table_cell
          (table_cell_content))
        (table_block_marker)))))

================|||
delimited block after a text cell
================|||

|===
|h1 |h2

a|info

====
x
====

|y
|===

-------------------|||

(document
  (block_element
    (section_block
      (table_block
        (table_block_marker)
        (table_header_row
          (table_cell
            (table_cell_content))
          (table_cell
            (table_cell_content)))
        (table_cell
          (table_cell_attr)
          (table_cell_content)
          (section_block
            (delimited_block
              (delimited_block_start_marker)
              (section_block
                (paragraph
                  (line)))
              (delimited_block_end_marker))))
        (table_cell
          (table_cell_content))
        (table_block_marker)))))

================|||
source block after a text cell
================|||

|===
|h1 |h2

a|info

[source,ruby]
----
puts 1
----

|y
|===

-------------------|||

(document
  (block_element
    (section_block
      (table_block
        (table_block_marker)
        (table_header_row
          (table_cell
            (table_cell_content))
          (table_cell
            (table_cell_content)))
        (table_cell
          (table_cell_attr)
          (table_cell_content)
          (section_block
            (element_attr
              (element_attr_marker)
              (positional_attr
                (block_style))
              (positional_attr)
              (element_attr_marker))
            (listing_block
              (listing_block_start_marker)
              (listing_block_body)
              (listing_block_end_marker))))
        (table_cell
          (table_cell_content))
        (table_block_marker)))))

================|||
a list after a text cell stays flat content
================|||

|===
|h1 |h2

a|info

* one
* two

|y
|===

-------------------|||

(document
  (block_element
    (section_block
      (table_block
        (table_block_marker)
        (table_header_row
          (table_cell
            (table_cell_content))
          (table_cell
            (table_cell_content)))
        (table_cell
          (table_cell_attr)
          (table_cell_content))
        (table_cell
          (table_cell_content))
        (table_block_marker)))))

================|||
a nested table after a text cell is still a sibling
================|||

[cols="1,2a"]
|===
| Col 1 | Col 2

| Cell 2.1
| Cell 2.2

[cols="2,1"]
!===
! C11
! C12
!===

|===

-------------------|||

(document
  (block_element
    (section_block
      (element_attr
        (element_attr_marker)
        (named_attr
          (attribute_name)
          (attribute_value
            (value)))
        (element_attr_marker))
      (table_block
        (table_block_marker)
        (table_header_row
          (table_cell
            (table_cell_content))
          (table_cell
            (table_cell_content)))
        (table_cell
          (table_cell_content))
        (table_cell
          (table_cell_content))
        (ntable_block
          (element_attr
            (element_attr_marker)
            (named_attr
              (attribute_name)
              (attribute_value
                (value)))
            (element_attr_marker))
          (ntable_block_marker)
          (ntable_cell)
          (ntable_cell)
          (ntable_block_marker))
        (table_block_marker)))))

================|||
text resumes after a block in the same cell
================|||

|===
|h1 |h2

a|info

[NOTE]
====
x
====

more prose

|y
|===

-------------------|||

(document
  (block_element
    (section_block
      (table_block
        (table_block_marker)
        (table_header_row
          (table_cell
            (table_cell_content))
          (table_cell
            (table_cell_content)))
        (table_cell
          (table_cell_attr)
          (table_cell_content)
          (section_block
            (element_attr
              (element_attr_marker)
              (positional_attr
                (block_style))
              (element_attr_marker))
            (delimited_block
              (delimited_block_start_marker)
              (section_block
                (paragraph
                  (line)))
              (delimited_block_end_marker)))
          (table_cell_content))
        (table_cell
          (table_cell_content))
        (table_block_marker)))))
